# propagator

./: .gitignore  Cargo.toml  README.md  propagator.toml  topics.toml
decisions/: ADR-0001-redis-wrapper-auto-inference.md  ADR-0002-add-command-source-onboarding.md  _index.md  _template.md
features/: TEMPLATE.md
fixtures/cpp/: clearing.cpp
fixtures/dd/: oms-core-dependencies.csv
fixtures/go/: risk.go
fixtures/rust/: order_gw.rs
fixtures/sql/: oms_procs.sql
proptest-regressions/: graph.txt
src/: affected.rs  config.rs  graph.rs  main.rs  mcp.rs  model.rs  store.rs  sync.rs
src/extract/: code.rs  invokes.rs  mod.rs  mq.rs  oracle_dd.rs  owns.rs  redis.rs  sql.rs
