[package]
name = "propagator"
version = "0.1.0"
edition = "2024"
description = "Dependency & message-flow tracing for trading infra, from the editor"

[dependencies]
anyhow = "1"
bincode = "1"
blake3 = "1"
clap = { version = "4", features = ["derive"] }
regex = "1"
schemars = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
walkdir = "2"
rmcp = { version = "2", features = ["server", "transport-io", "macros"] }
tokio = { version = "1", features = ["full"] }
tree-sitter = "0.26.10"
tree-sitter-go = "0.25.0"
tree-sitter-rust = "0.24.2"
tree-sitter-cpp = "0.23.4"

[dev-dependencies]
proptest = "1"
pretty_assertions = "1"

[profile.release]
opt-level = 3
